--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "js-cookie": "^3.0.5",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
